--- a/JustGoTravel.Data/JustGoTravel.Data.csproj
+++ b/JustGoTravel.Data/JustGoTravel.Data.csproj
@@ -54,8 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agent.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="VacationPack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rating.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
