--- a/JustGoTravel.MVC/bin/JustGoTravel.MVC.dll.config
+++ b/JustGoTravel.MVC/bin/JustGoTravel.MVC.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-JustGoTravel.MVC-c42dcf07-421d-4cd8-8689-efaaf8511440;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-JustGoTravel.MVC-c42dcf07-421d-4cd8-8689-efaaf8511440.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=JustGoTravel.MVC;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
